{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "1412420f-006a-4a12-a045-f21b6e024035",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "63fb875a-19a8-4245-b028-973cdf7ab02e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "f9ca8232-5a1b-4cd2-ba29-c5ed62f5adca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.48)"
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "8abe5377-dfca-4f00-be30-64ab6c559dff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1f811eb1-9e12-47ed-87b5-78a969157f73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "5fa72acf-1bcc-4dbb-862f-4868c6597f65",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "80b8f86a-e5b4-46dc-8da9-3c2d97fa1d3e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ecbca5cd-19c6-44d4-b478-cbe57e8285a3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "be41e3ba-d4c7-4499-ae15-98cba6cc68ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "348f7f07-8239-4081-bef3-30f889a01fe9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5b26c94f-4df3-4b83-8f69-5ae3a80a6c99",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02e9edde-01d0-4350-921d-f59f2a9f61e1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "177f4520-4beb-4d8d-97d2-ce3a7d6d4d83",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "641ee1ea-1e4b-400d-a38c-1de880ae90e4",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "9a81a5af-3861-4a6f-8950-8821fb67445d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Button",
                    "id": "8f32c932-fa9f-4fb4-ae56-ec3a16df3587",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseLClick",
                    "type": "Button",
                    "id": "8e0377f6-8986-4cc2-b30d-774916e641e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseRClick",
                    "type": "Button",
                    "id": "b57de578-1fd8-43bb-82b4-5fce8a16f6d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ecb0ad7e-8d6f-4e36-9c2a-997cfa5e5124",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01adac6c-02c5-4e2e-a8b0-94f4a358d4d6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b089c9ec-728b-4c1b-855c-a1943baeb767",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b1193ee-da5a-4004-a41b-b9a466a15082",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Other",
            "id": "fcc471b7-a03b-4606-8a6d-73d7f3b8b3a3",
            "actions": [
                {
                    "name": "Pause/Exit",
                    "type": "Button",
                    "id": "791624d5-89af-43bb-a93c-7ca92982cd06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8032c230-49df-4fdd-80e4-d1c583517d76",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause/Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cf313f2-e252-421a-b0c9-da312f640f6e",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause/Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}